<resources>
    <string name="app_name">Expense Manager</string>
    <string name="get_started">Before we get started</string>
    <string name="set_budget">Set up your budget</string>
    <string name="name">Name</string>
    <string name="month_budget">Monthly Budget</string>
    <string name="month_income">Monthly Income</string>
    <string name="name_error">Name can\'t be empty!</string>
    <string name="all_trans">All Transactions</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <string name="net_balance">Net Balance</string>
    <string name="up_trans">Upcoming Transactions</string>
    <string name="add_tran">Add Transaction</string>
    <string name="tran_name">Transaction Name</string>
    <string name="tran_amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="to_date">To Date</string>
    <string name="recurring_tran">Recurring Transaction</string>
    <string name="comments">Comments</string>
    <string name="cat_error">Category must be chosen!</string>
    <string name="type_error">Payment type must be chosen!</string>
    <string name="amount_error">Enter a valid amount!</string>
    <string name="time">Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="view_all">View All</string>
    <string name="calendar">calendar</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="delete_tran">Delete Transaction</string>
    <string name="delete_question">Do you want to delete</string>
    <string name="question_mark">\?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_tran">Edit Transaction</string>
    <string name="cash">Cash</string>
    <string name="credit">Credit</string>
    <string name="cheque">Cheque</string>
    <string name="other_pays">Other</string>
    <string name="budget_exceeded">Budget Exceeded!</string>
    <string name="report_type">Report Type:</string>
    <string name="expenses">Expenses</string>
    <string name="monthly">Monthly</string>
    <string name="annually">Annually</string>
    <string name="basic">Basic</string>
    <string name="edit">Edit</string>
    <string name="budget">Budget</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="save">Save</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="select_category">Select Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="cancel">Cancel</string>
    <string name="other">Other</string>
    <string name="category">Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="cat_delete_error">Can\'t delete category! You must delete associated transactions first.</string>
</resources>