<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OnBoardingFragment">

    <TextView
        android:id="@+id/tvGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_dimen"
        android:text="@string/get_started"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/very_large_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvSetBudget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvSetBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_dimen"
        android:text="@string/set_budget"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintBottom_toTopOf="@id/inputName"
        app:layout_constraintStart_toStartOf="@id/tvGetStarted"
        app:layout_constraintTop_toBottomOf="@id/tvGetStarted" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_dimen"
        android:layout_marginTop="@dimen/larger_dimen"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/inputBudget"
        app:layout_constraintTop_toBottomOf="@id/tvSetBudget">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputBudget"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_dimen"
        android:layout_marginTop="@dimen/regular_dimen"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/inputIncome"
        app:layout_constraintTop_toBottomOf="@id/inputName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/month_budget"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputIncome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_dimen"
        android:layout_marginTop="@dimen/regular_dimen"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/inputBudget">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/month_income"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:padding="@dimen/medium_dimen"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>