<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/regular_dimen"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:elevation="@dimen/small_dimen"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/large_dimen"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBalance"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/huge_dimen"
            android:layout_marginTop="@dimen/regular_dimen"
            android:max="100"
            android:progress="50"
            android:indeterminate="false"
            android:progressBackgroundTint="#F04"
            android:progressTint="#9F0"
            android:progressBackgroundTintMode="src_over"
            android:secondaryProgressTint="#F04"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/tvIncome"
            app:layout_constraintTop_toBottomOf="@id/progressBalance"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/large_dimen"
            android:textSize="@dimen/medium_text_size"
            android:textColor="#FFF"
            android:text="@string/income"
            android:layout_marginTop="@dimen/small_dimen"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvIncomeVal"
            app:layout_constraintTop_toBottomOf="@id/tvIncome"
            app:layout_constraintStart_toStartOf="@id/tvIncome"
            app:layout_constraintEnd_toEndOf="@id/tvIncome"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="#9F0"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvExpenses"
            app:layout_constraintTop_toTopOf="@id/tvIncome"
            app:layout_constraintBottom_toBottomOf="@id/tvIncome"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/large_dimen"
            android:textSize="@dimen/medium_text_size"
            android:textColor="#FFF"
            android:text="@string/expenses"
            android:layout_marginTop="@dimen/small_dimen"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvExpensesVal"
            app:layout_constraintTop_toBottomOf="@id/tvExpenses"
            app:layout_constraintStart_toStartOf="@id/tvExpenses"
            app:layout_constraintEnd_toEndOf="@id/tvExpenses"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:textColor="#F04"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/very_large_dimen"
        android:background="@drawable/rectangle_round_background"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/small_dimen"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/regular_dimen"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header">

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/regular_dimen"
            android:text="@string/net_balance"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/tvBalanceVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="@dimen/medium_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>